<resources>
    <string name="app_name">Restaurants4you</string>
    <string name="registo">Registo</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confpassword">Confirmar Password</string>
    <string name="Name_File_Token">FileToken</string>
    <string name="info">Info</string>
    <string name="ErrorServer">Ocorreu um erro com o servidor</string>
    <string name="take_photo">Tirar Foto</string>
    <string name="nome_do_restaurante">Nome</string>
    <string name="gerir_restaurante">Gerir Restaurante</string>
    <string name="add_restaurante">Adicionar Restaurante</string>
    <string name="descri_o">Descrição</string>
    <string name="morada">Morada</string>
    <string name="contacto">Contacto</string>
    <string name="email">Email</string>
    <string name="hor_rio">Horário</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="ainda_n_o_tens_conta_regista_te_aqui">Ainda não tens conta? Regista-te aqui</string>
    <string name="j_tens_conta_faz_aqui_log_in">Já tens conta? Faz aqui Log In</string>
    <string name="adicionar">Adicionar</string>
    <string name="mapa">Mapa</string>
    <string name="consulte_aqui_o_mapa">Consulte aqui o mapa de restaurantes aderentes:</string>
    <string name="registe_aqui_o_seu_restaurante">Gira aqui o seu restaurante ou resgiste-o caso ainda não o tenha feito:</string>
    <string name="bem_vindo">Olá, bem vindo!</string>
    <string name="edit_restaurante">Editar Restaurante</string>
    <string name="apagar">Apagar</string>
    <string name="editar">Editar</string>
    <string name="apagar_restaurante">Apagar Restaurante</string>
    <string name="selecionar_restaurante">Selecionar Restaurante</string>
    <string name="selecionar_imagem">Selecionar Imagem</string>
    <string name="nenhuma_imagem_selecionada">Nenhuma Imagem Selecionada</string>
    <string name="submeter">Submeter</string>
    <string name="logout">Logout</string>
    <string name="sobre">Sobre</string>
    <string name="imagem">Imagem</string>
    <string name="direita">Direita</string>
    <string name="esquerda">Esquerda</string>
    <string name="local">Local</string>
    <string name="adicionar_imagem">Adicionar Imagem</string>
    <string name="curso">Engenharia Informática</string>
    <string name="uc">Desenvolvimento de Aplicações Móveis</string>
    <string name="ipt">IPT</string>
    <string name="ano">2022/2023</string>
    <string name="fernando_fuzeiro">Fernando Fuzeiro</string>
    <string name="n_22111">Nº 22111</string>
    <string name="vasco_araujo">Vasco Araújo</string>
    <string name="n_23055">Nº 23055</string>
    <string name="eliminar">Eliminar</string>
    <string name="selecione_um_restaurante">Selecione um restaurante</string>
    <string name="dados_do_restaurante">Dados do restaurante</string>
</resources>