<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/titulo"
                android:text="@string/apagar_restaurante" />

            <TextView
                style="@style/txtLoginRegisto"
                android:text="@string/selecione_um_restaurante"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/dropdownDel"
                style="@style/spinner"
                android:hint="@string/selecionar_restaurante" />


            <Button
                android:id="@+id/btnDel"
                style="@style/btn"
                android:text="@string/apagar" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>