<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtNome"
                style="@style/txtView" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/btnEsq"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/esq"
                    android:text="." />

                <Button
                    android:id="@+id/btnDir"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/dir"
                    android:text="." />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtDesc"
                    style="@style/txtView" />

                <TextView
                    android:id="@+id/txtLocal"
                    style="@style/txtView" />

                <TextView
                    android:id="@+id/txtContacto"
                    style="@style/txtView" />

                <TextView
                    android:id="@+id/txtEmail"
                    style="@style/txtView" />

                <TextView
                    android:id="@+id/txtHorario"
                    style="@style/txtView" />

                <Button
                    android:id="@+id/btnUpload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:text="@string/selecionar_imagem" />

                <ImageView
                    android:id="@+id/imageSelect"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true" />

                <TextView
                    android:id="@+id/txtImgSelec"
                    style="@style/txtView"
                    android:text="@string/nenhuma_imagem_selecionada" />

                <Button
                    android:id="@+id/btnSub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:text="@string/submeter" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>